correction d'une petite erreur

--- a/MVA_HW1_Thibaud_EHRET_Sammy_Khalife.tex
+++ b/MVA_HW1_Thibaud_EHRET_Sammy_Khalife.tex
@@ -320,7 +320,7 @@ Finally, the distribution $g$ is
 \end{eqnarray*}
 
 
-We can also consider the truncated version of both distribution $g_1$ and $g_2$ which correspond respectively to $\frac{g_1}{F_{IG}(t)}$ and $\frac{g_2}{\exp(-Kt)}$. We will now note $g_1$ and $g_2$ the truncated version therefore
+We can also consider the truncated version of both distribution $g_1$ and $g_2$ which correspond respectively to $\frac{g_1}{F_{IG}(t)}\mathbb{1}_{\{[0,t]\}}$ and $\frac{g_2}{\exp(-Kt)}\mathbb{1}_{\{[t,\infty]\}}$. We will now note $g_1\mathbb{1}_{\{[0,t]\}}$ and $g_2\mathbb{1}_{\{[t,\infty]\}}$ the truncated version therefore
 \begin{eqnarray*}
 	g(x) = \frac{\frac{4}{\pi}exp(-z)F_{IG}(t)}{\frac{4}{\pi} \exp(-z) F_{IG}(t) + \frac{1}{K} \exp(-Kt)}g_1(x) \mathbb{1}_{\{[0,t]\}}(x)+\\ \frac{\exp(-Kt)}{K(\frac{4}{\pi} \exp(-z) F_{IG}(t) + \frac{1}{K} \exp(-Kt))} g_2(x) \mathbb{1}_{\{[t,\infty]\}}(x)
 \end{eqnarray*}
